[package]
name = "network"
version = "0.1.0"
edition = "2021"

[features]
# default = ["network-tokio"]
default = ["network-renet", "use-local"]

network-renet = ["renet", "renet_netcode"]
network-tokio = []

use-local = ["common-local"]
use-git = ["common-git"]

[dependencies]
common-local = { path = "../brilliance-common", package = "brilliance-common", optional = true }
common-git = { git = "https://github.com/In-Its-Brilliance/brilliance-common", optional = true }

serde = { version = "1.0", features = ["derive"] }
log = { version = "0.4" }
flume = "0.11"
num = "0.4"
rand = "0.9"
trust-dns-resolver = { version = "0.23", features = ["dns-over-rustls", "tokio-runtime"] }

# Scripts
rhai = { version = "1.21", features = ["internals", "serde"] }

strum = "0.27"
strum_macros = "0.27"

downcast-rs = "2.0"
typetag = "0.2"

arrayvec = "0.7"
ahash = "0.8"
parking_lot = "0.12"

bincode = "1.3"
miniz_oxide = "0.8"

# https://github.com/bonsairobo/block-mesh-rs/blob/main/Cargo.toml
ilattice = "0.4"
ndshape = "0.3"
ndcopy = "0.3"

# Network
tokio = { version = "1.44", features = [ "full" ] }

renet = { version = "1.2", features = [], optional = true }
renet_netcode = { version = "1.2", optional = true }
