[package]
name = "network-consistency"
version = "0.1.0"
edition = "2021"

[dependencies]
network = { path = "../../" }
common = { git = "https://github.com/In-Its-Brilliance/brilliance-common" }

tokio = { version = "1.41.1", features = ["full"] }
bincode = "1.3.2"
log = { version = "0.4" }
tracing = "0.1"
tracing-subscriber = "0.3"
clap = { version = "4.4.18", features = ["string", "derive"] }
